// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductImage Debe de incrementar el contador 1`] = `
<DocumentFragment>
  <div
    class="productCard undefined"
  >
    <h1>
      Product Card
    </h1>
    <span>
      0
    </span>
    <button />
  </div>
</DocumentFragment>
`;

exports[`ProductImage Debe mostrar el componente correctamente 1`] = `
<DocumentFragment>
  <div
    class="productCard undefined"
  >
    <h1>
      Product Card
    </h1>
  </div>
</DocumentFragment>
`;
